till darkmode switch(broken)

--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@
     <div class="nav-wrapper">
         <div class="container">
             <div class="nav">
-                <a href="/index.html">TrackIt</a>
-                <div class="darkmode-switch">
+                <a href="/index.html" class="logo">TrackIt<i class="bx bxs-virus"></i></a>
+                <div class="darkmode-switch" id="darkmode-switch">
                     <span>
                         <i class="bx bxs-moon"></i>
                         <i class="bx bxs-sun"></i>
